mailing list changes, sql query changed

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -949,27 +949,71 @@ get_invoice_detail_usng_invno =  Select  t5.id, \
 
 getissues = Select issueNumber from issues where issues.issueNumber <= (select issues from journals where journalName = ?)
 
-select_generateml =   Select \
-                    subscriber.id, subscription.id, subscriptiondetails.id, journals.id, journals.journalCode, \
-                    subscriber_type.subtypecode, subscriber.subscriberNumber, subscriber.subscriberName, subscriber.department, subscriber.institution, \
-                    subscriber.shippingAddress, cities.city, districts.district, states.state, countries.country, \
-                    subscriber.pincode, subscriptiondetails.copies, subscriptiondetails.startYear, subscriptiondetails.startMonth, \
-                    subscriptiondetails.endYear, subscriptiondetails.endMonth \
-                    from \
-                    subscriptiondetails left join subscription on subscriptiondetails.subscriptionID = subscription.id \
-                    left join subscriber on subscription.subscriberID = subscriber.id \
-                    left join subscriber_type on subscriber.subtype = subscriber_type.id \
-                    left join journal_groups on subscriptiondetails.journalGroupID = journal_groups.id \
-                    right join journal_group_contents on journal_group_contents.journalGroupId = journal_groups.id \
-                    left join journals on journal_group_contents.journalId = journals.id \
-                    left join cities on subscriber.city = cities.id \
-                    left join countries on subscriber.country = countries.id \
-                    left join districts on subscriber.district = districts.id \
-                    left join states on subscriber.state = states.id \
-                    where subscriptiondetails.active = '1' \
-                    and journals.journalName = ? \
-                    and datediff(date_format(concat(subscriptiondetails.endYear,'-',subscriptiondetails.endMonth,'-30'),'%Y/%m/%d'), date_format(concat(?,'-',(select id from months where month = ?),'-30'),'%Y/%m/%d'))>= 0 \
-                    and datediff(date_format(concat(subscriptiondetails.startYear,'-',subscriptiondetails.startMonth,'-1'),'%Y/%m/%d'), date_format(concat(?,'-',(select id from months where month = ?),'-30'),'%Y/%m/%d'))<= 0
+select_generateml =   SELECT subscriber.id,\
+                                subscription.id,\
+                                subscriptiondetails.id,\
+                                journals.id,\
+                                journals.journalCode,\
+                                subscriber_type.subtypecode,\
+                                subscriber.subscriberNumber,\
+                                subscriber.subscriberName,\
+                                subscriber.department,\
+                                subscriber.institution,\
+                                subscriber.shippingAddress,\
+                                cities.city,\
+                                districts.district,\
+                                states.state,\
+                                countries.country,\
+                                subscriber.pincode,\
+                                subscriptiondetails.copies,\
+                                subscriptiondetails.startYear,\
+                                subscriptiondetails.startMonth,\
+                                subscriptiondetails.endYear,\
+                                subscriptiondetails.endMonth \
+                           FROM subscriptiondetails \
+                                LEFT JOIN subscription \
+                                   ON subscriptiondetails.subscriptionID = subscription.id \
+                                LEFT JOIN subscriber \
+                                   ON subscription.subscriberID = subscriber.id \
+                                LEFT JOIN subscriber_type \
+                                   ON subscriber.subtype = subscriber_type.id \
+                                LEFT JOIN journal_groups \
+                                   ON subscriptiondetails.journalGroupID = journal_groups.id \
+                                RIGHT JOIN journal_group_contents \
+                                   ON journal_group_contents.journalGroupId = journal_groups.id \
+                                LEFT JOIN journals \
+                                   ON journal_group_contents.journalId = journals.id \
+                                LEFT JOIN cities \
+                                   ON subscriber.city = cities.id \
+                                LEFT JOIN countries \
+                                   ON subscriber.country = countries.id \
+                                LEFT JOIN districts \
+                                   ON subscriber.district = districts.id \
+                                LEFT JOIN states \
+                                   ON subscriber.state = states.id \
+                          WHERE     subscriptiondetails.active = true \
+                                AND journals.journalName = ? \
+                                AND LAST_DAY(concat(?,\
+                                                    '-',\
+                                                    (SELECT id \
+                                                       FROM months \
+                                                      WHERE month = ?),\
+                                                    '-',\
+                                                    '01')) BETWEEN DATE_FORMAT( \
+                                                                      concat(\
+                                                                         subscriptiondetails.startYear,\
+                                                                         '-',\
+                                                                         subscriptiondetails.startMonth,\
+                                                                         '-',\
+                                                                         '1'),\
+                                                                      '%Y/%m/%d') \
+                                                               AND LAST_DAY(\
+                                                                      concat(\
+                                                                         subscriptiondetails.endYear,\
+                                                                         '-',\
+                                                                         subscriptiondetails.endMonth,\
+                                                                         '-',\
+                                                                         '1'))\
 
 insert_ml = insert into mailing_list (journalId, issue, `year`, month) values \
             ((select id from journals where journals.journalName = ?),?,?,(select id from months where months.month = ?))
