mailing list changes, sql query changed

--- a/trunk/web/WEB-INF/classes/log4j.properties
+++ b/trunk/web/WEB-INF/classes/log4j.properties
@@ -1,5 +1,5 @@
 # This sets the global logging level and specifies the appenders
-log4j.rootLogger=DEBUG, JDS
+log4j.rootLogger=INFO, JDS
 
 # settings for the console appender
 log4j.appender.JDS=org.apache.log4j.RollingFileAppender
