--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -202,20 +202,18 @@ get_agent_by_id = select t1.id\
                     where t1.id = ?
 
 search_agent = select t1.id ,t1.agentName ,t1.regDate ,t1.emailId ,t1.address ,t2.city from agents t1 \
-left join cities t2 on t1.cityId = t2.id \
-where t2.city like ? and  t1.agentName like ?
+                left join cities t2 on t1.cityId = t2.id \
+                where t2.city like ? and  t1.agentName like ?
 
 ! End Agent----------------------------------------------------
 
 !Print Order -----------------------------------------------------
 get_year = select distinct(year) from print_order group by year
 
-!get_print_order_by_year = select t1.id, t2.journalCode, t2.journalName, t1.year, t2.issues, t1.printOrder, (t2.issues * t1.printOrder) annualPrintOrder from print_order t1, journals t2 where t1.journalId = t2.id and t1.year = ?
-!get_print_order_by_year = select t1.id, t2.journalCode, t2.journalName, t1.janPrintOrder, t1.febPrintOrder, t1.marPrintOrder, t1.aprPrintOrder, t1.mayPrintOrder, t1.junePrintOrder, t1.julyPrintOrder, t1.augPrintOrder, t1.septPrintOrder, t1.octPrintOrder, t1.novPrintOrder, t1.decPrintOrder ,(t1.janPrintOrder + t1.febPrintOrder + t1.marPrintOrder + t1.aprPrintOrder + t1.mayPrintOrder + t1.junePrintOrder + t1.julyPrintOrder + t1.augPrintOrder + t1.septPrintOrder + t1.octPrintOrder + t1.novPrintOrder + t1.decPrintOrder) annualPrintOrder from print_order t1, journals t2 where t1.journalId = t2.id and t1.year = ?
 get_print_order_by_year = select t1.id, t2.journalCode, t2.journalName, \
-t1.janPrintOrder, t1.febPrintOrder, t1.marPrintOrder, t1.aprPrintOrder, t1.mayPrintOrder, t1.junePrintOrder, \
-t1.julyPrintOrder, t1.augPrintOrder, t1.septPrintOrder, t1.octPrintOrder, t1.novPrintOrder, t1.decPrintOrder , t1.annualPrintOrder \
-from journals t2 left join print_order t1 on t2.id = t1.journalId and t1.`year`=?
+                            t1.janPrintOrder, t1.febPrintOrder, t1.marPrintOrder, t1.aprPrintOrder, t1.mayPrintOrder, t1.junePrintOrder, \
+                            t1.julyPrintOrder, t1.augPrintOrder, t1.septPrintOrder, t1.octPrintOrder, t1.novPrintOrder, t1.decPrintOrder , t1.annualPrintOrder \
+                            from journals t2 left join print_order t1 on t2.id = t1.journalId and t1.`year`=?
 
 getNoOfIssues = select issues from journals where journalName = ?
 
@@ -252,8 +250,8 @@ journalgroupname = select journalGroupName from journal_groups
 getJournalGroupId = select id from journal_groups where journalGroupName = ?
 
 getJournalGroupContents = select journalName from journals \
-where id = ANY (select journalId from journal_group_contents \
-where journalGroupId = (select id from journal_groups where journalGroupName = ?))
+                            where id = ANY (select journalId from journal_group_contents \
+                            where journalGroupId = (select id from journal_groups where journalGroupName = ?))
 
 year = select year from year
 
@@ -266,24 +264,24 @@ addToJournalGroupContents = insert into journal_group_contents(journalGroupId, j
 checkIfJournalGroupExists = select * from journal_groups where journalGroupName = ?
 
 checkIfJournalGroupContentExists = select * from journal_group_contents where \
-journalGroupId = (select id from journal_groups where journalGroupName = ?) and \
-journalId = (select id from journals where journalName = ?)
+                                    journalGroupId = (select id from journal_groups where journalGroupName = ?) and \
+                                    journalId = (select id from journals where journalName = ?)
 
 !End Print Order --------------------------------------------------------
 
 !Annual Subscription Rate------------------------------------------------------------------------
 search_subRate = select t1.id, t2.journalGroupName, t3.subtypedesc, t1.year, t1.period, t1.rate from subscription_rates t1, journal_groups t2, subscriber_type t3 \
-        where t1.journalGroupId = t2.id and t1.subtypeId = t3.id and t1.year = ? and t2.journalGroupName = ? and t3.subtypedesc = ?
+                   where t1.journalGroupId = t2.id and t1.subtypeId = t3.id and t1.year = ? and t2.journalGroupName = ? and t3.subtypedesc = ?
 
 add_subRate = insert into subscription_rates (journalGroupId, subtypeId, year, period, rate) values \
-((select id from journal_groups where journal_groups.journalGroupName = ?), \
-(select id from subscriber_type where subscriber_type.subtypedesc = ?),?,?,?)
+                ((select id from journal_groups where journal_groups.journalGroupName = ?), \
+                (select id from subscriber_type where subscriber_type.subtypedesc = ?),?,?,?)
 
 check_subRate = select id from subscription_rates \
-where journalGroupId = (select id from journal_groups where journal_groups.journalGroupName = ?) and \
-subtypeId = (select id from subscriber_type where subscriber_type.subtypedesc = ?) and \
-year = ? and \
-period = ?
+                where journalGroupId = (select id from journal_groups where journal_groups.journalGroupName = ?) and \
+                subtypeId = (select id from subscriber_type where subscriber_type.subtypedesc = ?) and \
+                year = ? and \
+                period = ?
 
 
 
@@ -834,18 +832,36 @@ listbil = select t1.journalCode, t1.subtypecode, t1.subscriberNumber, t1.subscri
 ! End List BIL
 
 ! Subscription Figures
-subscription_Figures = select count(subscriber.subscriberNumber), sum(subscriptiondetails.copies) \
-                        from \
-                        subscriptiondetails left join subscription on subscriptiondetails.subscriptionID = subscription.id \
-                        left join subscriber on subscription.subscriberID = subscriber.id \
-                        left join subscriber_type on subscriber.subtype = subscriber_type.id \
-                        left join journal_groups on subscriptiondetails.journalGroupID = journal_groups.id \
-                        right join journal_group_contents on journal_group_contents.journalGroupId = journal_groups.id \
-                        left join journals on journal_group_contents.journalId = journals.id \
-                        where subscriptiondetails.active = '1' and journals.journalCode = ? and subscriber_type.subtypecode = ? \
-                        and datediff(date_format(concat(subscriptiondetails.endYear,'-',subscriptiondetails.endMonth,'-30'),'%Y/%m/%d'), date_format(curdate(),'%Y/%m/%d'))>= 0 \
-                        and datediff(date_format(concat(subscriptiondetails.startYear,'-',subscriptiondetails.startMonth,'-1'),'%Y/%m/%d'), date_format(curdate(),'%Y/%m/%d'))<= 0 \
-                        group by journals.journalCode and subscriber_type.subtypecode
+subscription_Figures = SELECT count(subscriber.subscriberNumber), sum(subscriptiondetails.copies) \
+                        FROM subscriptiondetails \
+                             LEFT JOIN subscription \
+                                ON subscriptiondetails.subscriptionID = subscription.id \
+                             LEFT JOIN subscriber \
+                                ON subscription.subscriberID = subscriber.id \
+                             LEFT JOIN subscriber_type \
+                                ON subscriber.subtype = subscriber_type.id \
+                             LEFT JOIN journal_groups \
+                                ON subscriptiondetails.journalGroupID = journal_groups.id \
+                             RIGHT JOIN journal_group_contents \
+                                ON journal_group_contents.journalGroupId = journal_groups.id \
+                             LEFT JOIN journals \
+                                ON journal_group_contents.journalId = journals.id \
+                       WHERE     subscriptiondetails.active = true \
+                             AND journals.journalCode = ? \
+                             AND subscriber_type.subtypecode = ? \
+                             AND curdate() BETWEEN date_format( \
+                                                      concat(subscriptiondetails.startYear, \
+                                                             '-', \
+                                                             subscriptiondetails.startMonth, \
+                                                             '-', \
+                                                             '1'), \
+                                                      '%Y/%m/%d') \
+                                               AND LAST_DAY(concat(subscriptiondetails.endYear, \
+                                                                   '-', \
+                                                                   subscriptiondetails.endMonth, \
+                                                                   '-', \
+                                                                   '1')) \
+                        GROUP BY journals.journalCode AND subscriber_type.subtypecode
 
 ! End Subscription figures
 get_max_no_of_issues = select max(issues) FROM journals
