fix left menu navigation under subscriber menu and other fixes

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -518,10 +518,12 @@ get_subscription_for_subscriber =   select  t8.id, \
                                             t8.subscriptionTotal, \
                                             (t8.balance - sum(COALESCE(t10.amount,0))) as balance, \
                                             t8.currency, \
-                                            t8.legacy \
+                                            t8.legacy, \
+                                            t12.agentName \
                                             from \
                                             ( \
                                                 select  t5.id \
+                                                , t5.inwardID \
                                                 , t5.inwardNumber \
                                                 , DATE_FORMAT(t5.subscriptionDate,'%d/%m/%Y') as subscriptionDate \
                                                 , t5.amount \
@@ -532,6 +534,7 @@ get_subscription_for_subscriber =   select  t8.id, \
                                                 from  ( \
                                                     select t4.subscriberName \
                                                             , t1.id \
+                                                            , t1.inwardID \
                                                             , t2.inwardNumber \
                                                             , t2.amount \
                                                             , t3.currency \
@@ -549,6 +552,8 @@ get_subscription_for_subscriber =   select  t8.id, \
                                             ) \
                                         t8 left join payment t9 on t8.id = t9.subscriptionID \
                                         left join inward t10 on t9.inwardID=t10.id \
+                                        left join (inward_agent_details t11, agents t12) on t8.inwardID = t11.inwardID \
+                                        and t11.agentID = t12.id \
                                         group by t8.id,t8.inwardNumber \
                                         order by t8.id desc
 
