remember searched inwards

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -562,8 +562,10 @@ get_subscription_info_by_id =   SELECT t6.ID,\
                                         t6.INWARDNUMBER as inwardNumber,\
                                         t6.AMOUNT as amount,\
                                         COALESCE(t9.SUBSCRIPTIONTOTAL,0) as subscriptionTotal,\
-                                        (COALESCE(t9.SUBSCRIPTIONTOTAL,0) - t6.AMOUNT) AS balance \
+                                        (COALESCE(t9.SUBSCRIPTIONTOTAL,0) - t6.AMOUNT) AS balance, \
+                                        t11.agentName \
                                    FROM    (SELECT t1.ID,\
+                                                   t1.INWARDID, \
                                                    t2.INWARDNUMBER,\
                                                    sum((COALESCE(t2.AMOUNT, 0)) + COALESCE(t5.AMOUNT, 0)) AS amount \
                                               FROM SUBSCRIPTION t1 \
@@ -583,7 +585,9 @@ get_subscription_info_by_id =   SELECT t6.ID,\
                                               FROM SUBSCRIPTIONDETAILS t7, SUBSCRIPTION_RATES t8 \
                                              WHERE t7.JOURNALPRICEGROUPID = t8.ID AND t7.ACTIVE = TRUE \
                                             GROUP BY t7.SUBSCRIPTIONID) t9 \
-                                        ON t6.ID = t9.SUBSCRIPTIONID
+                                        ON t6.ID = t9.SUBSCRIPTIONID \
+                                        LEFT JOIN (inward_agent_details t10, agents t11) on t6.INWARDID = t10.INWARDID \
+                                        AND t10.agentID = t11.id
 
 get_subscription_detail_by_subscription_id =    select t2.id \
                                 , t3.journalGroupName as journalGroupName \
