--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -492,14 +492,14 @@ search_subscriber = select t1.id as subscriberID,subscriberNumber, subscriberNam
                 left join countries t3 on t1.country = t3.id \
                 left join states t4 on t1.state=t4.id
 
-get_missing_issues_for_subscriber = SELECT t1.ID,\
-                                        t3.INWARDNUMBER,\
-                                        t4.JOURNALNAME,\
-                                        t2.MONTH,\
+get_missing_issues_for_subscriber = SELECT t1.ID as id,\
+                                        t3.INWARDNUMBER as inwardNumber,\
+                                        t4.JOURNALNAME as journalName,\
+                                        t2.MONTH as month,\
                                         t2.`year`,\
-                                        t2.MISSINGCOPIES,\
-                                        t2.ACTION,\
-                                        t2.SENTON \
+                                        t2.MISSINGCOPIES as missingcopies,\
+                                        t2.ACTION as action,\
+                                        t2.SENTON as senton \
                                    FROM MISSING_ISSUE t1,\
                                         MISSING_ISSUE_JOURNALS t2,\
                                         INWARD t3,\
@@ -638,19 +638,26 @@ get_journal_group_price = select id, rate from subscription_rates where journalG
 get_journal_groupid_contents = select t1.journalname from journals t1,journal_group_contents t2 \
                                 where t2.journalId = t1.id and t2.journalGroupId = ?;
 
-get_subscription_details_for_inward = select t1.id as subscriptionid, t4.journalName, t2.startYear, t2.endYear, t2.copies \
-                                      from  subscription t1, \
+get_subscription_details_for_inward = SELECT t1.id AS subscriptionid, \
+                                            t4.journalName, \
+                                            t2.startYear, \
+                                            t2.endYear, \
+                                            count(t2.copies) as copies \
+                                       FROM subscription t1, \
                                             subscriptiondetails t2, \
                                             journal_group_contents t3, \
                                             journals t4, \
                                             inward t5 \
-                                      where t1.active=true \
-                                            and t1.id=t2.subscriptionID \
-                                            and t2.journalGroupID = t3.journalGroupID \
-                                            and t3.journalID = t4.id \
-                                            and t1.inwardID = t5.id \
-                                            and t5.inwardNumber = ? \
-                                      group by subscriptionid, t4.journalName
+                                      WHERE     t1.active = TRUE \
+                                            AND t1.id = t2.subscriptionID \
+                                            AND t2.journalGroupID = t3.journalGroupID \
+                                            AND t3.journalID = t4.id \
+                                            AND t1.inwardID = t5.id \
+                                            AND t5.inwardNumber = ? \
+                                     GROUP BY subscriptionid, \
+                                              t4.journalName, \
+                                              t2.startYear, \
+                                              t2.endYear
 
 update_subscription_detail =    update subscriptiondetails set startYear=?, startMonth=?, endYear=?, \
                                 journalPriceGroupID=? , copies=?, active=? \
