--- a/trunk/web/WEB-INF/web.xml
+++ b/trunk/web/WEB-INF/web.xml
@@ -196,6 +196,10 @@
         <servlet-name>fileupload</servlet-name>
         <servlet-class>IAS.Controller.fileupload.fileupload</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>usermgr</servlet-name>
+        <servlet-class>IAS.Controller.UserMgr.ResetPwd</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>main</servlet-name>
         <url-pattern>/main</url-pattern>
@@ -345,6 +349,10 @@
     <servlet-mapping>
         <servlet-name>fileupload</servlet-name>
         <url-pattern>/fileupload</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>usermgr</servlet-name>
+        <url-pattern>/usermgr/resetpwd</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>30</session-timeout>
