invoice report partailly completed

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -905,6 +905,10 @@ list_susbsriber = select subscriber.subscriberNumber, subscriber.subscriberName,
 
 ! End List subscriber
 
+! List Profarma Invoice
+list_invoice = 
+! End List Profarma Invoice
+
 #--------------------------------------------------------------------------
 # End Reports
 #--------------------------------------------------------------------------
