Subscriber Creation through Agent Upload

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -1410,3 +1410,6 @@ get_miId_for_inward = Select missing_issue.id, subscriber.subscriberNumber \
  validate_city = select * from cities where city = ?
  validate_district = select * from districts where district = ?
  validate_country = select * from countries where country = ?
+ validate_state = select * from states where state = ?
+ validate_subscriberno = select * from subscriber where subscriberNumber = ?
+ validate_subtype = select * from subscriber_type where subtype = ? and subtypecode = ?
