Back Issue List Completed Reminders Partially completed

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -1109,7 +1109,7 @@ subscribernumberbil =   select distinct subscriber.subscriberNumber \
                         group by subscriber.subscriberNumber
 
 
-generate_bil = select   mailing_list.id, \
+generate_bil = select mailing_list.id, \
                         subscriber.id, \
                         subscription.id, \
                         subscriptiondetails.id, \
@@ -1165,16 +1165,18 @@ insert_mldtl_bil = insert into mailing_list_detail \
                     ( ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, \
                     ?, ?, ?, ? )
 
-update_bil = update back_issue_list SET sent_to_subscriber = true WHERE Id = ? and sent_on = curdate()
+update_bil = update back_issue_list SET sent_to_subscriber = true, sent_on = curdate() WHERE Id = ?
 
-search_bil = select mailing_list_detail.journalCode, mailing_list_detail.subtypecode, mailing_list_detail.subscriberNumber, \
-                mailing_list_detail.subscriberName, mailing_list_detail.city, mailing_list_detail.state, \
-                mailing_list_detail.country, mailing_list_detail.pincode, mailing_list_detail.copies, mailing_list_detail.issue, \
-                mailing_list_detail.month, mailing_list_detail.`year`, mailing_list_detail.bildate \
-                from mailing_list_detail left join subscriptiondetails on mailing_list_detail.subscriptionDetailId = subscriptiondetails.id \
-                where \
-                mailing_list_detail.bilid <> '' and subscriptiondetails.active = '1' \
-                and mailing_list_detail.subscriberNumber = ?
+search_bil = select mailing_list_detail.id, journalCode, subtypecode, subscriberNumber, subscriberName, department , institution, \
+                address, city, district, state, country, pincode, mailing_list_detail.copies, mailing_list_detail.issue, \
+                mailing_list_detail.month, mailing_list_detail.`year`, mailing_list_detail.startYear, \
+                mailing_list_detail.startMonth, mailing_list_detail.endYear, mailing_list_detail.endMonth \
+            FROM \
+            mailing_list_detail, subscriptiondetails, back_issue_list \
+            where mailing_list_detail.subscriptionDetailId = subscriptiondetails.id and subscriptiondetails.active = '1' \
+            and mailing_list_detail.bilid = back_issue_list.id \
+            and  mailing_list_detail.startYear >= subscriptiondetails.startYear \
+            and mailing_list_detail.bilid <> ' '
 
 search_bil_ui = select \
             mailing_list_detail.journalCode, mailing_list_detail.subtypecode, mailing_list_detail.subscriberNumber, \
@@ -1184,8 +1186,9 @@ search_bil_ui = select \
             mailing_list_detail.issue, \
             mailing_list_detail.month, mailing_list_detail.`year`, mailing_list_detail.bildate \
             FROM \
-            mailing_list_detail, subscriptiondetails \
+            mailing_list_detail, subscriptiondetails, back_issue_list \
             where mailing_list_detail.subscriptionDetailId = subscriptiondetails.id and subscriptiondetails.active = '1' \
+            and mailing_list_detail.bilid = back_issue_list.id \
             and  mailing_list_detail.startYear >= subscriptiondetails.startYear \
             and mailing_list_detail.bilid <> ' '
 #--------------------------------------------------------------------------
@@ -1195,19 +1198,64 @@ search_bil_ui = select \
 # -------------------------------------------------------------------------
 #Reminders
 #--------------------------------------------------------------------------
-search_reminders_subscriber =  select subscriber.id, subscription.id as subId, subscriber_type.subtypecode, subscriber.subscriberNumber, \
+
+get_susbcriber_for_rem1 = Select subscription.id from subscription, subscriptiondetails \
+                            where subscriptiondetails.subscriptionID = subscription.id \
+                            and subscription.active and subscriptiondetails.endYear >= year(curdate()) \
+                            and subscription.id not in ( select reminders.subscriptionId from reminders)
+
+get_susbcriber_for_rem2 = SELECT distinct subscription.id \
+                            FROM subscriber, subscription, subscriptiondetails, subscriber_type, reminders \
+                            WHERE subscriptiondetails.subscriptionID = subscription.id \
+                            AND subscription.subscriberID = subscriber.id AND subscriptiondetails.endYear >= year(CURDATE()) \
+                            AND subscriber.subtype = subscriber_type.id AND subscriber_type.subtype = 'Paid' \
+                            AND reminders.subscriptionId = subscription.id and reminders.reminderType = '1' \
+                            and reminders.reminderType <> '2' and reminders.reminderType <> '3';
+
+get_susbcriber_for_rem2 = SELECT distinct subscription.id \
+                            FROM subscriber, subscription, subscriptiondetails, subscriber_type, reminders \
+                            WHERE subscriptiondetails.subscriptionID = subscription.id \
+                            AND subscription.subscriberID = subscriber.id AND subscriptiondetails.endYear >= year(CURDATE()) \
+                            AND subscriber.subtype = subscriber_type.id AND subscriber_type.subtype = 'Paid' \
+                            AND reminders.subscriptionId = subscription.id \
+                            and reminders.reminderType = '2' and reminders.reminderType <> '3';
+
+get_subscription_total =  SELECT (sum(subscription_rates.rate * subscriptiondetails.copies)) as subscription_total \
+           FROM subscriptiondetails, journal_groups, subscription_rates, subscription, subscriber \
+            WHERE subscriptiondetails.journalGroupID = journal_groups.id \
+            AND subscription_rates.journalGroupId = journal_groups.id \
+               AND subscription_rates.`year` = subscriptiondetails.startYear \
+               AND (  subscriptiondetails.endYear \
+                    - subscriptiondetails.startYear \
+                    + 1) = subscription_rates.period \
+                AND subscriptiondetails.subscriptionID = subscription.id \
+               AND subscription.subscriberID = subscriber.id \
+               AND subscriber.subtype = subscription_rates.subtypeId \
+               and subscription.id = ? \
+               group by subscriptiondetails.subscriptionID
+
+get_payment_total = SELECT sum(inward.amount) as payment_total \
+                    FROM payment, inward, subscription, inward_purpose \
+                    WHERE payment.inwardId = inward.id AND payment.subscriptionId = subscription.id \
+                    AND (   inward_purpose.purpose = 'New Subscription' OR inward_purpose.purpose = 'Renew Subscription' \
+                    OR inward_purpose.purpose = 'Payment' OR inward_purpose.purpose = 'Request For Invoice') \
+                    AND inward.inwardPurpose = inward_purpose.id AND subscription.id = ? \
+                    GROUP BY subscription.id, inward.id;
+
+insert_rem = INSERT INTO reminders(subscriptionId, balance, reminderType, reminderDate) \
+                VALUES (?, ?, ?, curdate())
+
+
+
+
+gen_reminders_subscriber =  select subscription.id as subId, subscriber_type.subtypecode, subscriber.subscriberNumber, \
                                 subscriber.subscriberName, reminders.balance, reminders.reminderType, reminders.reminderDate, \
-                                 subscriber.department, subscriber.institution, subscriber.shippingAddress, \
-                                cities.city, districts.district, states.state, countries.country, subscriber.pincode, \
                                 subscriber.email \
                                 from reminders, subscription, \
-                                subscriber left join cities on subscriber.city = cities.id \
-                                left join states on subscriber.state = states.id \
-                                left join countries on subscriber.country = countries.id \
-                                left join districts on subscriber.district = districts.id, subscriber_type \
+                                subscriber, subscriber_type \
                                 where \
                                 subscription.subscriberID = subscriber.id and reminders.subscriptionId = subscription.id \
-                                and subscriber.subtype = subscriber_type.id and year(reminders.reminderDate)= year(curdate()) \
+                                and subscriber.subtype = subscriber_type.id and reminders.reminderDate = curdate() \
                                 and reminders.reminderType = ?
 
 get_reminders_subscriber =  select subscriber.id, subscription.id as subId, subscriber_type.subtypecode, subscriber.subscriberNumber, \
