--- a/trunk/nbproject/project.properties
+++ b/trunk/nbproject/project.properties
@@ -20,7 +20,7 @@ build.test.classes.dir=${build.dir}/test/classes
 build.test.results.dir=${build.dir}/test/results
 build.web.dir=${build.dir}/web
 build.web.excludes=${build.classes.excludes}
-client.urlPart=
+client.urlPart=/home
 compile.jsps=false
 conf.dir=${source.root}/conf
 debug.classpath=${build.classes.dir}:${javac.classpath}
@@ -55,6 +55,7 @@ file.reference.mysql-connector-java-5.1.18-bin.jar=lib\\mysql-connector-java-5.1
 file.reference.mail.jar=lib/javamail-1.4.4/mail.jar
 file.reference.simple-java-mail-2.0.jar=lib\\simple-java-mail-2.0.jar
 file.reference.smtp.jar=lib/javamail-1.4.4/smtp.jar
+file.reference.xstream-1.4.3.jar=lib\\xstream-1.4.3.jar
 file.reference.YUIAnt.jar=lib\\YUIAnt.jar
 file.reference.yuicompressor-2.4.7.jar=lib\\yuicompressor-2.4.7.jar
 includes=**
@@ -88,7 +89,8 @@ javac.classpath=\
     ${file.reference.simple-java-mail-2.0.jar}:\
     ${file.reference.commons-fileupload-1.2.2.jar}:\
     ${file.reference.commons-io-2.4.jar}:\
-    ${file.reference.jxl.jar}
+    ${file.reference.jxl.jar}:\
+    ${file.reference.xstream-1.4.3.jar}
     ${file.reference.mail.jar}:\
     ${file.reference.smtp.jar}
 # Space-separated list of extra javac options
