--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -16,7 +16,7 @@
 
 ! Generic ------------------------------------------------------
 
-logged_in_user = select firstName, lastName from users where username = ?
+logged_in_user = select firstName, lastName, isPasswordReset from users where username = ?
 
 purpose = select purpose from inward_purpose order by id
 
@@ -31,6 +31,9 @@ language = select language from languages order by id
 month = select month from months order by id
 
 journalname = select journalName from journals order by id
+
+update_password = update users set password=?,isPasswordReset=? where username=?
+
 
 ! End Generic ------------------------------------------------------
 
