--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -1463,4 +1463,4 @@ get_miId_for_inward = Select missing_issue.id, subscriber.subscriberNumber \
  validate_country = select * from countries where country = ?
  validate_state = select * from states where state = ?
  validate_subscriberno = select * from subscriber where subscriberNumber = ?
- validate_subtype = select * from subscriber_type where subtype = ? and subtypecode = ?
+ validate_subtype = select * from subscriber_type where subtype = ? and subtypedesc = ?
